--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 9001 -c .storybook",
-    "lint:css": "stylelint \"./components/**/*.js\""
+    "start": "start-storybook -p 9001 -c .storybook",
+    "build": "build-storybook",
+    "lint:css": "stylelint \"./components/**/*.js\"",
+    "lint:js": "eslint \"./components/**/*.js\""
   },
   "repository": {
     "type": "git",
@@ -16,15 +18,9 @@
   "license": "MIT",
   "devDependencies": {
     "@kadira/storybook": "^2.35.3",
-    "css-loader": "^0.26.1",
     "eslint-config-kupibilet": "^6.1.0",
-    "postcss-loader": "^1.2.2",
-    "style-loader": "^0.13.1",
-    "stylelint": "^7.7.1",
     "stylelint-config-kupibilet": "^2.0.1",
-    "stylelint-config-standard": "^15.0.1",
-    "stylelint-processor-styled-components": "0.0.4",
-    "sugarss": "^0.2.0"
+    "stylelint-processor-styled-components": "0.0.4"
   },
   "dependencies": {
     "react": "^15.4.2",
