--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "start-storybook -p 9001 -c .storybook",
     "build": "build-storybook",
     "lint:css": "stylelint \"./components/**/*.js\"",
-    "lint:js": "eslint \"./components/**/*.js\""
+    "lint:js": "eslint \"./components/**/*.js\"",
+    "postinstall": "move-bin"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@kadira/storybook": "^2.35.3",
     "eslint-config-kupibilet": "^6.1.0",
+    "move-binaries-to-bin": "^1.0.1",
     "stylelint-config-kupibilet": "^2.0.1",
     "stylelint-processor-styled-components": "0.0.4"
   },
