--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "storyshots": "^3.2.1",
-    "styled-components": "^1.4.2"
+    "styled-components": "^1.4.2",
+    "@kupibilet/icons": "^2.0.32"
   }
 }
