--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "UI kit for kupibilet web app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretest": "npm run lint:js --silent && npm run lint:css --silent",
+    "test": "npm run jest --silent",
     "start": "start-storybook -p 9001 -c .storybook",
     "build": "build-storybook",
     "lint:css": "stylelint ./components/**/*.js",
@@ -26,17 +27,21 @@
     "@kadira/storybook-addon-options": "^1.0.1",
     "babel-jest": "^18.0.0",
     "babel-polyfill": "^6.22.0",
+    "eslint": "^3.16.1",
     "eslint-config-kupibilet": "^8.1.1",
     "jest": "^18.1.0",
     "move-binaries-to-bin": "^1.0.1",
+    "stylelint": "^7.9.0",
     "stylelint-config-kupibilet": "^3.0.0",
     "stylelint-processor-styled-components": "0.0.4"
   },
   "dependencies": {
+    "@kupibilet/icons": "^3.2.3",
     "react": "^15.4.2",
+    "react-addons-shallow-compare": "^15.4.2",
+    "react-dates": "^7.0.1",
     "react-dom": "^15.4.2",
     "storyshots": "^3.2.1",
-    "styled-components": "^1.4.2",
-    "@kupibilet/icons": "^2.0.32"
+    "styled-components": "^1.4.2"
   }
 }
