--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-jest": "^18.0.0",
     "babel-polyfill": "^6.22.0",
     "eslint": "^3.16.1",
+    "babel-preset-stage-2": "^6.22.0",
     "eslint-config-kupibilet": "^8.1.1",
     "jest": "^18.1.0",
     "move-binaries-to-bin": "^1.0.1",
