Clean up merge request #6

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@kupibilet/icons": "^3.2.3",
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-addons-shallow-compare": "^15.4.2",
     "react-dates": "^7.0.1",
