--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
   },
   "dependencies": {
     "@kupibilet/icons": "^3.2.3",
+    "@kupibilet/react-dates": "^7.0.1",
     "classnames": "^2.2.5",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-addons-shallow-compare": "^15.4.2",
-    "react-dates": "^7.0.1",
     "react-dom": "^15.4.2",
     "storyshots": "^3.2.1",
     "styled-components": "^1.4.2"
