--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@kupibilet/icons": "^3.2.3",
     "lodash": "^4.17.4",
+    "rc-util": "^4.0.2",
     "react": "^15.4.2",
     "react-addons-shallow-compare": "^15.4.2",
     "react-dates": "^7.0.1",
