--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:js": "eslint ./components/**/*.js",
     "jest": "jest",
     "postinstall": "move-bin",
-    "build": "babel components/ -d lib/ --ignore stories",
+    "build": "babel src/ -d lib/ --ignore stories",
     "prepublish": "npm run build --silent"
   },
   "repository": {
