--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "@kadira/storybook-addon-knobs": "^1.7.1",
     "@kadira/storybook-addon-options": "^1.0.1",
     "babel-cli": "^6.24.0",
-    "babel-jest": "^18.0.0",
+    "babel-jest": "^19.0.0",
     "babel-polyfill": "^6.22.0",
+    "babel-preset-env": "^1.2.2",
     "babel-preset-stage-2": "^6.22.0",
     "eslint": "^3.16.1",
     "eslint-config-kupibilet": "^8.1.1",
-    "jest": "^18.1.0",
+    "jest": "^19.0.0",
     "move-binaries-to-bin": "^1.0.1",
     "raw-loader": "^0.5.1",
     "stylelint": "^7.9.0",
@@ -48,7 +49,7 @@
     "react": "^15.4.2",
     "react-addons-shallow-compare": "^15.4.2",
     "react-dom": "^15.4.2",
-    "storyshots": "^3.2.1",
+    "storyshots": "^3.2.2",
     "styled-components": "^1.4.2"
   }
 }
