--- a/.travis.yml
+++ b/.travis.yml
@@ -6,20 +6,19 @@ script:
   - npm run build-storybook
 
 deploy:
-  provider: npm
-  email: max@kupibilet.ru
-  skip_cleanup: true
-  api_key:
-    secure: ***REMOVED***
-  on:
-    branch: master
-    tags: true
-    repo: kupibilet-frontend/ui
-
-deploy:
-  local_dir: storybook-static
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN
-  on:
-    branch: master
+  - provider: npm
+    email: max@kupibilet.ru
+    skip_cleanup: true
+    api_key:
+      secure: ***REMOVED***
+    on:
+      branch: master
+      tags: true
+      repo: kupibilet-frontend/ui
+  -
+    provider: pages
+    local_dir: storybook-static
+    skip_cleanup: true
+    github_token: $GITHUB_TOKEN
+    on:
+      branch: master
