--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@kupibilet/react-dates": "^8.2.0",
     "classnames": "^2.2.5",
     "lodash": "^4.17.4",
+    "rc-collapse": "^1.6.12",
     "react": "^15.4.2",
     "react-addons-shallow-compare": "^15.4.2",
     "react-dom": "^15.4.2",
