--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "babel-preset-stage-2": "^6.22.0",
     "eslint": "^3.16.1",
     "eslint-config-kupibilet": "^8.1.1",
-    "jest": "^19.0.0",
     "husky": "^0.13.2",
+    "jest": "^19.0.0",
+    "moment": "^2.17.1",
     "move-binaries-to-bin": "^1.0.1",
     "raw-loader": "^0.5.1",
     "stylelint": "^7.9.0",
