--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^15.4.2",
     "react-addons-shallow-compare": "^15.4.2",
     "react-dom": "^15.4.2",
+    "rheostat": "^2.1.0",
     "storyshots": "^3.2.2",
     "styled-components": "^1.4.2"
   }
