Run pretest instead test on precommit

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "jest": "jest",
     "postinstall": "move-bin || true",
     "build": "NODE_ENV=build babel src/ -d lib/ --ignore stories",
-    "precommit": "npm test",
+    "precommit": "npm run pretest",
     "prepublish": "npm run build --silent"
   },
   "repository": {
