--- a/package.json
+++ b/package.json
@@ -50,13 +50,16 @@
     "storyshots": "~3.2.2",
     "styled-components": "~1.4.5",
     "stylelint-config-kupibilet": "^3.1.2",
-    "stylelint-processor-styled-components": "~0.1.0"
+    "stylelint-processor-styled-components": "~0.1.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
     "@kupibilet/react-dates": "~8.2.0",
     "antd": "~2.9.1",
     "polished": "^1.0.4",
-    "rc-collapse": "~1.7.0"
+    "rc-collapse": "~1.7.0",
+    "react-autosuggest": "^9.0.0",
+    "section-iterator": "^2.0.0"
   },
   "peerDependencies": {
     "@kupibilet/icons": "^3.3.0",
