--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "babel-preset-env": "~1.4.0",
     "babel-preset-stage-2": "~6.24.1",
     "classnames": "~2.2.5",
-    "eslint-config-kupibilet": "~8.2.1",
+    "eslint-config-kupibilet": "^8.2.3",
     "husky": "~0.13.2",
     "jest": "~19.0.0",
     "moment": "~2.18.1",
@@ -47,7 +47,7 @@
     "react-dom": "~15.5.4",
     "storyshots": "~3.2.2",
     "styled-components": "~1.4.5",
-    "stylelint-config-kupibilet": "~3.0.0",
+    "stylelint-config-kupibilet": "^3.1.2",
     "stylelint-processor-styled-components": "~0.1.0"
   },
   "dependencies": {
