--- a/.babelrc
+++ b/.babelrc
@@ -3,13 +3,15 @@
   "env": {
     "development": {
       "presets": ["env", "react", "stage-2"],
-      "plugins": ["transform-react-jsx-source"],
+      "plugins": ["transform-react-jsx-source", "flow-react-proptypes"],
     },
     "test": {
       "presets": ["env", "react", "stage-2"],
+      "plugins": ["flow-react-proptypes"]
     },
     "build": {
-      "presets": [["env", {"modules": false}], "react", "stage-2"]
+      "presets": [["env", {"modules": false}], "react", "stage-2"],
+      "plugins": ["flow-react-proptypes"],
     }
   }
 }
