--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "~15.5.4",
     "react-addons-shallow-compare": "~15.5.2",
     "react-dom": "~15.5.4",
+    "rheostat": "^2.1.0",
     "storyshots": "~3.2.2",
     "styled-components": "~1.4.5",
     "stylelint-config-kupibilet": "^3.1.2",
