--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 node_js:
 - stable
 
+before_install:
+  - yarn global add makeshift && makeshift
+
 script:
   - npm run build-storybook
 
