--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@kupibilet/ui",
   "version": "1.4.16",
   "description": "UI kit for kupibilet web app",
-  "main": "lib/index.js",
+  "main": "index.js",
   "scripts": {
     "pretest": "npm run lint:js --silent && npm run lint:css --silent",
     "test": "npm run jest --silent",
@@ -13,7 +13,7 @@
     "jest": "jest",
     "flow": "flow",
     "postinstall": "move-bin || true",
-    "build": "NODE_ENV=build babel src/ -d lib/ --ignore stories",
+    "build": "NODE_ENV=build babel src/ -d ./ --ignore stories",
     "prepublish": "in-publish && npm run build --silent || not-in-publish",
     "precommit": "lint-staged"
   },
@@ -63,6 +63,7 @@
     "lodash": "^4.17.4",
     "polished": "^1.0.4",
     "rc-collapse": "~1.7.0",
+    "rc-tabs": "^7.5.0",
     "react-autosuggest": "^9.0.0",
     "react-onclickoutside": "^5.11.1",
     "section-iterator": "^2.0.0"
