--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "start": "start-storybook -p 9001 -c .storybook",
     "build-storybook": "build-storybook",
     "lint:css": "echo \"TODO: Fix stylelint. kupibilet-frontend/ui#1\" && exit 0; stylelint ./src/components/**/*.js",
-    "lint:js": "eslint ./src/components/**/*.js",
+    "lint:js": "eslint ./src/**/*.js",
     "jest": "jest",
     "flow": "flow",
     "postinstall": "move-bin || true",
     "build": "NODE_ENV=build babel src/ -d lib/ --ignore stories",
-    "prepublish": "npm run build --silent"
+    "prepublish": "npm run build --silent",
+    "precommit": "lint-staged"
   },
   "repository": {
     "type": "git",
@@ -41,6 +42,7 @@
     "flow-bin": "^0.47.0",
     "husky": "~0.13.2",
     "jest": "~20.0.0",
+    "lint-staged": "^3.5.1",
     "moment": "~2.18.1",
     "move-binaries-to-bin": "~1.0.1",
     "prop-types": "^15.5.8",
