--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "npm run jest --silent",
     "start": "start-storybook -p 9001 -c .storybook",
     "build-storybook": "build-storybook",
-    "lint:css": "echo \"TODO: Fix stylelint. kupibilet-frontend/ui#1\" && exit 0; stylelint ./src/components/**/*.js",
+    "lint:css": "echo \"TODO: Fix stylelint. kupibilet-frontend/ui#1\" >&2 && exit 0; stylelint ./src/components/**/*.js",
     "lint:js": "eslint ./src/**/*.js",
     "jest": "jest",
     "flow": "flow",
