--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "build-storybook": "build-storybook",
     "lint:css": "echo \"TODO: Fix stylelint. kupibilet-frontend/ui#1\" >&2 && exit 0; stylelint ./src/components/**/*.js",
     "lint:js": "eslint ./src/**/*.js",
-    "jest": "jest",
+    "jest": "jest --bail",
     "flow": "flow",
     "postinstall": "move-bin || true",
-    "build": "NODE_ENV=build babel src/ -d ./ --ignore stories",
+    "build": "NODE_ENV=build babel src/ -d ./ --ignore stories,test",
     "prepublish": "in-publish && npm run build --silent || not-in-publish",
-    "prepush": "lint-staged"
+    "precommit": "lint-staged",
+    "prepush": "npm run test --silent"
   },
   "repository": {
     "type": "git",
