--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-redux": "^5.0.5",
     "react-test-renderer": "^15.5.4",
     "redux": "^3.7.1",
+    "redux-form": "^6.8.0",
     "styled-components": "^2.0.1",
     "stylelint-config-kupibilet": "^3.1.2",
     "stylelint-processor-styled-components": "~0.1.0",
