--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "NODE_ENV=build babel src/ -d ./ --ignore stories,test",
     "prepublish": "in-publish && npm run build --silent || not-in-publish",
     "precommit": "lint-staged",
-    "prepush": "npm run test --silent"
+    "prepush": "npm run test --silent",
+    "postversion": "git push --follow-tags"
   },
   "repository": {
     "type": "git",
