--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "husky": "~0.13.2",
     "in-publish": "^2.0.0",
     "jest": "~20.0.0",
+    "jest-styled-components": "^4.3.0",
     "lint-staged": "^3.5.1",
     "lodash": "^4.17.4",
     "mkp": "^1.0.1",
