--- a/.flowconfig
+++ b/.flowconfig
@@ -10,5 +10,7 @@ src
 
 [options]
 module.system.node.resolve_dirname=node_modules
+module.system.node.resolve_dirname=src
+
 esproposal.class_instance_fields=enable
 esproposal.class_static_fields=enable
