Add babel import aliasing and babel-styled-components, optimize .babelrc

--- a/package.json
+++ b/package.json
@@ -2,21 +2,20 @@
   "name": "@kupibilet/ui",
   "version": "2.4.2",
   "description": "UI kit for kupibilet web app",
-  "main": "index.js",
   "scripts": {
-    "pretest": "npm run lint:js --silent && npm run lint:css --silent",
-    "test": "npm run jest --silent",
-    "start": "start-storybook -p 9001 -c .storybook",
-    "build-storybook": "build-storybook",
+    "pretest": "yarn run lint:js --silent && yarn run lint:css --silent",
+    "test": "yarn run jest --silent",
+    "start": "BABEL_ENV=default start-storybook -p 9001 -c .storybook",
+    "build-storybook": "BABEL_ENV=default build-storybook",
     "lint:css": "echo \"TODO: Fix stylelint. kupibilet-frontend/ui#1\" >&2 && exit 0; stylelint ./src/components/**/*.js",
-    "lint:js": "eslint \"./src/**/*.js\"",
-    "jest": "jest --bail",
+    "lint:js": "BABEL_ENV=default eslint \"./src/**/*.js\"",
+    "jest": "BABEL_ENV=default jest --bail --no-cache",
     "flow": "flow",
     "postinstall": "move-bin || true",
-    "build": "NODE_ENV=build babel src/ -d ./ --ignore stories,test",
-    "prepublish": "in-publish && npm run build --silent || not-in-publish",
+    "build": "BABEL_ENV=esmodules NODE_ENV=production babel src/ -d ./ --ignore stories,test",
+    "prepublish": "in-publish && yarn run build --silent || not-in-publish",
     "precommit": "lint-staged",
-    "prepush": "npm run test --silent",
+    "prepush": "yarn run test --silent",
     "postversion": "git push --follow-tags"
   },
   "repository": {
@@ -36,13 +35,17 @@
     "babel-cli": "~6.24.0",
     "babel-jest": "~20.0.3",
     "babel-plugin-flow-react-proptypes": "^4.0.0",
+    "babel-plugin-module-resolver": "2.6.2",
+    "babel-plugin-styled-components": "^1.1.7",
     "babel-plugin-transform-react-jsx-source": "~6.22.0",
     "babel-polyfill": "~6.23.0",
     "babel-preset-env": "~1.5.0",
     "babel-preset-stage-2": "~6.24.1",
     "classnames": "~2.2.5",
     "eslint-config-kupibilet": "^9.2.0",
+    "eslint-import-resolver-babel-module": "^3.0.0",
     "flow-bin": "^0.51.1",
+    "glob": "^7.1.2",
     "husky": "~0.13.2",
     "in-publish": "^2.0.0",
     "jest": "~20.0.0",
