--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "postinstall": "move-bin || true",
     "build": "BABEL_ENV=esmodules NODE_ENV=production babel src/ -d ./ --ignore stories,test",
     "prepublish": "in-publish && yarn run build --silent || not-in-publish",
-    "precommit": "lint-staged",
+    "precommit": "BABEL_ENV=default lint-staged",
     "prepush": "yarn run test --silent",
     "postversion": "git push --follow-tags"
   },
