--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: node_js
 node_js:
 - stable
+
+notifications:
+  email:
+    on_success: never
+    on_failure: change
+
 git:
   depth: 2
 
