Update storybook and improve stories navigarion groups

--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
   "devDependencies": {
     "@kupibilet/icons": "~4.0.0",
     "@kupibilet/moment": "^0.0.2",
-    "@storybook/addon-centered": "^3.0.2",
-    "@storybook/addon-info": "^3.0.2",
-    "@storybook/addon-knobs": "^3.0.2",
-    "@storybook/addon-storyshots": "^3.0.2",
-    "@storybook/addons": "^3.0.2",
-    "@storybook/react": "^3.0.2",
+    "@storybook/addon-centered": "^3.2.7",
+    "@storybook/addon-info": "^3.2.9",
+    "@storybook/addon-knobs": "^3.2.8",
+    "@storybook/addon-options": "^3.2.6",
+    "@storybook/addon-storyshots": "^3.2.8",
+    "@storybook/addons": "^3.2.6",
+    "@storybook/react": "^3.2.8",
     "babel-cli": "~6.26.0",
     "babel-jest": "~20.0.3",
     "babel-plugin-flow-react-proptypes": "^5.0.0",
