--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,13 @@ notifications:
 git:
   depth: 2
 
+cache:
+  yarn: true
+
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH=$HOME/.yarn/bin:$PATH
+
 script:
   - yarn test
 
@@ -23,7 +30,6 @@ deploy:
     skip_cleanup: true
     api_key: $NPM_TOKEN
     on:
-      branch: master
       tags: true
       repo: kupibilet-frontend/ui
 
