--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "lint:js": "BABEL_ENV=default eslint \"./src/**/*.js\"",
     "jest": "BABEL_ENV=default jest --bail --no-cache",
     "flow": "flow",
-    "postinstall": "move-bin || true",
+    "postinstall": "scripts/check-engines.js && move-bin",
     "build": "BABEL_ENV=esmodules NODE_ENV=production babel src/ -d ./ --ignore stories,test",
-    "prepublish": "in-publish && yarn run build --silent || not-in-publish",
+    "can-publish": "scripts/is-able-to-publish.js",
+    "prepublishOnly": "yarn run can-publish && yarn run build --silent",
     "precommit": "BABEL_ENV=default lint-staged",
-    "prepush": "yarn run test --silent",
     "postversion": "git push --follow-tags"
+  },
+  "engines": {
+    "node": ">=8",
+    "npm": ">=5",
+    "yarn": ">=0.27.5"
   },
   "repository": {
     "type": "git",
@@ -43,13 +48,13 @@
     "babel-polyfill": "~6.26.0",
     "babel-preset-env": "~1.5.0",
     "babel-preset-stage-2": "~6.24.1",
+    "chalk": "^2.1.0",
     "classnames": "~2.2.5",
     "eslint-config-kupibilet": "^9.2.0",
     "eslint-import-resolver-babel-module": "^3.0.0",
     "flow-bin": "^0.53.0",
     "glob": "^7.1.2",
     "husky": "~0.13.2",
-    "in-publish": "^2.0.0",
     "jest": "~20.0.0",
     "jest-styled-components": "^4.3.0",
     "lint-staged": "^4.0.3",
@@ -64,6 +69,7 @@
     "react-dom": "~15.5.4",
     "react-onclickoutside": "^6.4.0",
     "react-test-renderer": "^15.5.4",
+    "semver": "^5.4.1",
     "styled-components": "^2.1.2",
     "stylelint-config-kupibilet": "^3.1.2",
     "stylelint-processor-styled-components": "~0.1.0",
