Refactor Storybook's addons and decorators and store it in specific folder

--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,8 @@
           "alias": {
             "blocks": "./blocks",
             "components": "./components",
-            "utils": "./utils"
+            "utils": "./utils",
+            "storybook": "./storybook"
           }
         }],
         ["styled-components", {
