--- a/package.json
+++ b/package.json
@@ -69,8 +69,13 @@
     "react-addons-shallow-compare": "~15.5.2",
     "react-dom": "~15.5.4",
     "react-onclickoutside": "^6.4.0",
+    "react-redux": "^5.0.6",
     "react-test-renderer": "^15.5.4",
+    "redux": "^3.7.2",
+    "redux-form": "^7.0.4",
+    "redux-logger": "^3.0.6",
     "semver": "^5.4.1",
+    "storybook-addon-redux-listener": "nezed-forks/storybook-addon-redux-listener#feature/upgrade-deps",
     "styled-components": "^2.1.2",
     "stylelint-config-kupibilet": "^3.1.2",
     "stylelint-processor-styled-components": "~0.1.0",
