--- a/.flowconfig
+++ b/.flowconfig
@@ -1,5 +1,5 @@
 [ignore]
-.*/node_modules
+.*/node_modules(?!redux-form)
 .*/storybook
 .*/test
 
@@ -7,6 +7,7 @@
 src
 
 [libs]
+redux-form
 
 [options]
 module.system.node.resolve_dirname=node_modules
