--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "scripts": {
     "pretest": "yarn lint:js && yarn lint:css",
     "test": "yarn jest",
+    "prestart": "scripts/check-engines.js",
     "start": "BABEL_ENV=default start-storybook -p 9001 -c .storybook",
     "build-storybook": "BABEL_ENV=default build-storybook",
     "lint:css": "echo \"TODO: Fix stylelint. kupibilet-frontend/ui#1\" >&2 && exit 0; stylelint ./src/components/**/*.js",
     "lint:js": "BABEL_ENV=default eslint \"./src/**/*.js\"",
     "jest": "BABEL_ENV=default jest --bail --no-cache",
     "flow": "flow",
+    "prebuild": "scripts/check-engines.js",
     "build": "BABEL_ENV=esmodules NODE_ENV=production babel src/ -d ./ --ignore stories,test",
     "can-publish": "scripts/is-able-to-publish.js",
-    "postinstall": "scripts/check-engines.js && move-bin",
+    "postinstall": "move-bin",
     "postversion": "git push --follow-tags",
     "prepublishOnly": "yarn can-publish && yarn build",
     "precommit": "BABEL_ENV=default lint-staged",
