--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
   "devDependencies": {
     "@kupibilet/icons": "~5.0.0",
     "@kupibilet/moment": "^0.0.2",
-    "@storybook/addon-centered": "^3.2.7",
-    "@storybook/addon-info": "^3.2.9",
-    "@storybook/addon-knobs": "^3.2.8",
-    "@storybook/addon-options": "^3.2.6",
-    "@storybook/addon-storyshots": "^3.2.8",
-    "@storybook/addons": "^3.2.6",
-    "@storybook/react": "^3.2.8",
+    "@storybook/addon-centered": "^3.2.12",
+    "@storybook/addon-info": "^3.2.12",
+    "@storybook/addon-knobs": "^3.2.12",
+    "@storybook/addon-options": "^3.2.12",
+    "@storybook/addon-storyshots": "^3.2.12",
+    "@storybook/addons": "^3.2.12",
+    "@storybook/react": "^3.2.12",
     "babel-cli": "~6.26.0",
     "babel-jest": "~21.0.0",
     "babel-plugin-flow-react-proptypes": "^5.0.0",
@@ -59,27 +59,25 @@
     "glob": "^7.1.2",
     "husky": "~0.13.2",
     "jest": "~21.1.0",
-    "jest-styled-components": "^4.3.0",
+    "jest-styled-components": "^4.6.0",
     "lint-staged": "^4.0.3",
     "lodash": "^4.17.4",
     "mkp": "^1.0.1",
     "move-binaries-to-bin": "~1.0.1",
     "polished": "^1.3.0",
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.6.0",
     "raw-loader": "~0.5.1",
-    "react": "~15.5.4",
+    "react": "^16.0.0",
     "react-addons-shallow-compare": "~15.5.2",
-    "react-dom": "~15.5.4",
-    "react-onclickoutside": "^6.4.0",
+    "react-dom": "^16.0.0",
+    "react-onclickoutside": "^6.6.0",
     "react-redux": "^5.0.6",
-    "react-test-renderer": "^15.5.4",
+    "react-test-renderer": "^16.0.0",
     "redux": "^3.7.2",
     "redux-form": "^7.0.4",
     "redux-logger": "^3.0.6",
     "semver": "^5.4.1",
     "styled-components": "^2.1.2",
-    "stylelint-config-kupibilet": "^3.1.2",
-    "stylelint-processor-styled-components": "~0.1.0",
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
@@ -96,10 +94,10 @@
     "classnames": "^2.2.5",
     "lodash": "^4.17.4",
     "polished": "^1.3.0",
-    "prop-types": "^15.5.8",
-    "react": "^15.5.0",
-    "react-addons-shallow-compare": "^15.5.2",
-    "react-dom": "^15.5.4",
+    "prop-types": "^15.6.0",
+    "react": "^15.5.0 || ^16.0.0",
+    "react-addons-shallow-compare": "~15.5.2",
+    "react-dom": "^15.5.0 || ^16.0.0",
     "react-onclickoutside": "^6.4.0",
     "styled-components": "^2.1.2"
   }
