--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "rc-collapse": "~1.7.0",
     "rc-tabs": "^9.0.3",
     "react-autosuggest": "^9.0.0",
+    "react-portal": "^4.0.0-beta.1",
     "section-iterator": "^2.0.0"
   },
   "peerDependencies": {
