--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "prebuild": "scripts/check-engines.js",
     "build": "BABEL_ENV=esmodules NODE_ENV=production babel src/ -d ./ --ignore stories,test",
     "can-publish": "scripts/is-able-to-publish.js",
+    "fetch-git-tags": "git tag | xargs git tag -d &> /dev/null && git fetch origin --tags &> /dev/null",
+    "drop-pre-tags": "g tag | grep - | xargs git push --no-verify --delete origin &> /dev/null",
     "postinstall": "move-bin; true",
     "postversion": "git push --follow-tags",
     "prepublishOnly": "yarn build",
     "precommit": "BABEL_ENV=default lint-staged",
-    "prepush": "yarn run test"
+    "prepush": "yarn run test",
+    "postmerge": "yarn fetch-git-tags",
+    "update": "yarn drop-pre-tags"
   },
   "engines": {
     "node": ">=8",
