--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "@storybook/addons": "^3.2.12",
     "@storybook/react": "^3.2.12",
     "babel-cli": "~6.26.0",
-    "babel-jest": "~21.0.0",
-    "babel-plugin-flow-react-proptypes": "^5.0.0",
+    "babel-jest": "^21.2.0",
+    "babel-plugin-flow-react-proptypes": "^7.0.0",
     "babel-plugin-module-resolver": "2.6.2",
     "babel-plugin-styled-components": "^1.1.7",
     "babel-plugin-transform-react-jsx-source": "~6.22.0",
@@ -59,10 +59,10 @@
     "classnames": "~2.2.5",
     "eslint-config-kupibilet": "^9.2.0",
     "eslint-import-resolver-babel-module": "^3.0.0",
-    "flow-bin": "^0.54.0",
+    "flow-bin": "^0.57.3",
     "glob": "^7.1.2",
     "husky": "~0.13.2",
-    "jest": "~21.1.0",
+    "jest": "^21.2.1",
     "jest-styled-components": "^4.6.0",
     "lint-staged": "^4.0.3",
     "lodash": "^4.17.4",
