More npm scripts

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "can-publish": "scripts/is-able-to-publish.js",
     "fetch-git-tags": "git tag | xargs git tag -d &> /dev/null && git fetch origin --tags &> /dev/null",
     "drop-pre-tags": "git tag | grep - | xargs git push --no-verify --delete origin &> /dev/null",
+    "//": "---        Git and NPM hooks section        ---",
     "postinstall": "move-bin; true",
+    "preversion": "yarn fetch-git-tags && yarn drop-pre-tags",
     "postversion": "git push --follow-tags",
     "prepublishOnly": "yarn build",
     "precommit": "BABEL_ENV=default lint-staged",
