--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "babel-preset-stage-2": "~6.24.1",
     "chalk": "^2.1.0",
     "classnames": "~2.2.5",
-    "eslint-config-kupibilet": "^9.2.0",
+    "eslint-config-kupibilet": "^9.3.0",
     "eslint-import-resolver-babel-module": "^3.0.0",
     "flow-bin": "^0.57.3",
     "glob": "^7.1.2",
@@ -90,8 +90,9 @@
     "@kupibilet/react-dates": "^12.3.0",
     "@kupibilet/react-media": "^1.5.1",
     "rc-collapse": "~1.7.0",
-    "rc-tabs": "^9.0.3",
+    "rc-tabs": "^9.1.10",
     "react-autosuggest": "^9.0.0",
+    "react-portal": "^4.0.0-beta.2",
     "section-iterator": "^2.0.0"
   },
   "peerDependencies": {
