--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@kupibilet/ui",
+  "version": "3.3.5-8",
   "version": "3.3.5-4",
   "description": "UI kit for kupibilet web app",
   "scripts": {
