--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "BABEL_ENV=esmodules NODE_ENV=production babel src/ -d ./ --ignore stories,test",
     "can-publish": "scripts/is-able-to-publish.js",
     "fetch-git-tags": "git tag | xargs git tag -d &> /dev/null && git fetch origin --tags &> /dev/null",
-    "drop-pre-tags": "git tag | grep - | xargs git push --no-verify --delete origin &> /dev/null",
+    "predrop-pre-tags": "git tag | grep - | xargs git push --no-verify --delete origin &> /dev/null",
+    "drop-pre-tags": "git tag | grep - | xargs git tag -d &> /dev/null",
     "//": "---        Git and NPM hooks section        ---",
     "postinstall": "move-bin; true",
     "preversion": "yarn fetch-git-tags && yarn drop-pre-tags",
