--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "rc-tabs": "^9.1.10",
     "react-autosuggest": "^9.0.0",
     "react-portal": "^4.0.0-beta.2",
+    "rheostat": "^2.1.3",
     "section-iterator": "^2.0.0"
   },
   "peerDependencies": {
