Added custom job for push which upgrade version to custom build

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,3 +42,11 @@ deploy:
     on:
       branch: master
       tags: false
+
+  - provider: script
+    script: yarn versionize
+    skip_cleanup: true
+    on:
+      all_branches: true
+      condition: $TRAVIS_BRANCH != "master" && $TRAVIS_BRANCH != "develop"
+      tags: false
