--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ deploy:
     api_key: $NPM_TOKEN
     on:
       tags: true
+      branch: master
       repo: kupibilet-frontend/ui
 
   - provider: pages
