--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "rc-collapse": "~1.7.0",
     "rc-tabs": "^9.1.10",
     "react-autosuggest": "^9.0.0",
-    "react-portal": "^4.0.0-beta.2",
+    "react-portal": "^4.1.4",
     "rheostat": "^2.1.3",
     "section-iterator": "^2.0.0"
   },
