Added custom job for push which upgrade version to custom build (#236)
* Added custom job for push which upgrade version to custom build

* Remove npm hooks

* Test comment to github

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ before_install:
 script:
   - yarn test
 
+after_success:
+  - scripts/after-success.sh
+
 before_deploy:
   - yarn build-storybook
   - yarn global add makeshift && makeshift -r registry.npmjs.org
@@ -33,6 +36,7 @@ deploy:
     api_key: $NPM_TOKEN
     on:
       tags: true
+      branch: master
       repo: kupibilet-frontend/ui
 
   - provider: pages
