--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@storybook/react": "^3.2.12",
     "babel-cli": "~6.26.0",
     "babel-jest": "^22.0.0",
-    "babel-plugin-flow-react-proptypes": "^13.0.0",
+    "babel-plugin-flow-react-proptypes": "^23.0.0",
     "babel-plugin-module-resolver": "2.6.2",
     "babel-plugin-styled-components": "^1.1.7",
     "babel-plugin-transform-react-jsx-source": "~6.22.0",
@@ -57,10 +57,10 @@
     "eslint-import-resolver-babel-module": "^3.0.0",
     "flow-bin": "^0.69.0",
     "glob": "^7.1.2",
-    "husky": "~0.13.2",
+    "husky": "^0.14.3",
     "jest": "^22.0.0",
     "jest-styled-components": "^5.0.1",
-    "lint-staged": "^5.0.0",
+    "lint-staged": "^7.0.4",
     "lodash": "^4.17.4",
     "mkp": "^1.0.1",
     "move-binaries-to-bin": "~1.0.1",
