--- a/package.json
+++ b/package.json
@@ -67,9 +67,9 @@
     "polished": "^1.3.0",
     "prop-types": "^15.6.0",
     "raw-loader": "~0.5.1",
-    "react": "^16.0.0",
+    "react": "^16.3.1",
     "react-addons-shallow-compare": "~15.5.2",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.3.1",
     "react-onclickoutside": "^6.6.0",
     "react-redux": "^5.0.6",
     "react-test-renderer": "^16.0.0",
@@ -92,16 +92,16 @@
     "section-iterator": "^2.0.0"
   },
   "peerDependencies": {
-    "@kupibilet/icons": "^5.0.0",
-    "@kupibilet/moment": "^0.0.2",
+    "@kupibilet/icons": "~5.1.0",
+    "@kupibilet/moment": "^0.0.3",
     "classnames": "^2.2.5",
     "lodash": "^4.17.4",
     "polished": "^1.3.0",
     "prop-types": "^15.6.0",
-    "react": "^15.5.0 || ^16.0.0",
+    "react": "^15.5.0 || ^16.3.0",
     "react-addons-shallow-compare": "~15.5.2",
-    "react-dom": "^15.5.0 || ^16.0.0",
+    "react-dom": "^15.5.0 || ^16.3.0",
     "react-onclickoutside": "^6.4.0",
-    "styled-components": "^2.1.2"
+    "styled-components": "^3.2.5"
   }
 }
