Upgrade styled-components, react and dev dependecies (#243)
* Upgrade SC deps

* Upgrade hooks dependecies

* Upgrade rc-collapse and its snap

* Upgrade react

* Upgrade module-resolver and finally use great config

--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "@storybook/react": "^3.2.12",
     "babel-cli": "~6.26.0",
     "babel-jest": "^22.0.0",
-    "babel-plugin-flow-react-proptypes": "^13.0.0",
-    "babel-plugin-module-resolver": "2.6.2",
+    "babel-plugin-flow-react-proptypes": "^23.0.0",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-styled-components": "^1.1.7",
     "babel-plugin-transform-react-jsx-source": "~6.22.0",
     "babel-polyfill": "~6.26.0",
@@ -55,22 +55,22 @@
     "chalk": "^2.1.0",
     "classnames": "~2.2.5",
     "eslint-config-kupibilet": "^9.3.0",
-    "eslint-import-resolver-babel-module": "^3.0.0",
+    "eslint-import-resolver-babel-module": "^4.0.0",
     "flow-bin": "^0.69.0",
     "glob": "^7.1.2",
-    "husky": "~0.13.2",
+    "husky": "^0.14.3",
     "jest": "^22.0.0",
-    "jest-styled-components": "^4.6.0",
-    "lint-staged": "^5.0.0",
+    "jest-styled-components": "^5.0.1",
+    "lint-staged": "^7.0.4",
     "lodash": "^4.17.4",
     "mkp": "^1.0.1",
     "move-binaries-to-bin": "~1.0.1",
     "polished": "^1.3.0",
     "prop-types": "^15.6.0",
     "raw-loader": "~0.5.1",
-    "react": "^16.0.0",
+    "react": "^16.3.1",
     "react-addons-shallow-compare": "~15.5.2",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.3.1",
     "react-onclickoutside": "^6.6.0",
     "react-redux": "^5.0.6",
     "react-test-renderer": "^16.0.0",
@@ -78,14 +78,14 @@
     "redux-form": "^7.0.4",
     "redux-logger": "^3.0.6",
     "semver": "^5.4.1",
-    "styled-components": "^2.1.2",
+    "styled-components": "^3.2.5",
     "versionize": "1.0.5",
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
     "@kupibilet/react-dates": "^12.3.0",
     "@kupibilet/react-media": "^1.5.1",
-    "rc-collapse": "~1.7.0",
+    "rc-collapse": "^1.9.0",
     "rc-tabs": "^9.1.10",
     "react-autosuggest": "^9.0.0",
     "react-portal": "^4.1.4",
@@ -93,16 +93,16 @@
     "section-iterator": "^2.0.0"
   },
   "peerDependencies": {
-    "@kupibilet/icons": "^5.0.0",
-    "@kupibilet/moment": "^0.0.2",
+    "@kupibilet/icons": "~5.1.0",
+    "@kupibilet/moment": "^0.0.3",
     "classnames": "^2.2.5",
     "lodash": "^4.17.4",
     "polished": "^1.3.0",
     "prop-types": "^15.6.0",
-    "react": "^15.5.0 || ^16.0.0",
+    "react": "^15.5.0 || ^16.3.0",
     "react-addons-shallow-compare": "~15.5.2",
-    "react-dom": "^15.5.0 || ^16.0.0",
+    "react-dom": "^15.5.0 || ^16.3.0",
     "react-onclickoutside": "^6.4.0",
-    "styled-components": "^2.1.2"
+    "styled-components": "^3.2.5"
   }
 }
