--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "redux-logger": "^3.0.6",
     "semver": "^5.4.1",
     "styled-components": "^3.2.5",
-    "versionize": "1.0.5",
+    "versionize": "^1.0.6",
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
