--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
   - yarn test
 
 after_success:
-  - scripts/after-success.sh
+  - scripts/after-success.sh || exit $?
 
 before_deploy:
   - yarn build-storybook
