Update ant-design notice...

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "author": "Kupibilet.ru Frontend Team",
   "license": "MIT",
-  "//": "See https://github.com/react-component/tabs/issues/133",
+  "//": "Still have no activity… https://github.com/react-component/tabs/issues/133",
   "resolutions": {
     "rc-tabs": "9.3.0"
   },
