--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "postinstall": "move-bin; true",
     "prepublishOnly": "yarn build"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$":  "<rootDir>/mocks/cssModule.js"
+    }
+  },
   "engines": {
     "node": ">=10",
     "npm": ">=6",
