--- a/package.json
+++ b/package.json
@@ -41,6 +41,14 @@
     }
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "@kupibilet/icons": "~5.3.23",
     "@kupibilet/moment": "^0.0.3",
     "@storybook/addon-centered": "^3.4.11",
@@ -50,15 +58,11 @@
     "@storybook/addon-storyshots": "^3.4.11",
     "@storybook/addons": "^3.4.11",
     "@storybook/react": "^3.4.11",
-    "babel-cli": "~6.26.0",
-    "babel-jest": "^23.0.0",
-    "babel-plugin-flow-react-proptypes": "^24.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "babel-plugin-flow-react-proptypes": "^24.1.2",
     "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-styled-components": "^1.1.7",
-    "babel-plugin-transform-react-jsx-source": "~6.22.0",
-    "babel-polyfill": "~6.26.0",
-    "babel-preset-env": "~1.7.0",
-    "babel-preset-stage-2": "~6.24.1",
+    "babel-plugin-styled-components": "^1.8.0",
     "chalk": "^2.1.0",
     "classnames": "~2.2.5",
     "eslint-config-kupibilet": "^10.1.3",
@@ -66,7 +70,7 @@
     "flow-bin": "^0.82.0",
     "glob": "^7.1.2",
     "husky": "^1.1.0",
-    "jest": "^23.6.0",
+    "jest": "test",
     "jest-styled-components": "^6.2.1",
     "lint-staged": "^7.2.0",
     "lodash": "^4.17.4",
