--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "chalk": "^2.1.0",
     "classnames": "~2.2.5",
     "eslint-config-kupibilet": "^10.1.3",
-    "eslint-import-resolver-babel-module": "^4.0.0",
+    "eslint-import-resolver-babel-module": "^5.0.0-beta.1",
     "flow-bin": "^0.82.0",
     "glob": "^7.1.2",
     "husky": "^1.1.0",
