--- a/package.json
+++ b/package.json
@@ -79,9 +79,9 @@
     "polished": "^2.2.0",
     "prop-types": "^15.6.0",
     "raw-loader": "~0.5.1",
-    "react": "^16.4.0",
+    "react": "^16.5.0",
     "react-addons-shallow-compare": "~15.6.2",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.5.0",
     "react-onclickoutside": "^6.6.0",
     "react-redux": "^5.0.6",
     "react-test-renderer": "^16.0.0",
@@ -95,11 +95,13 @@
   },
   "dependencies": {
     "@kupibilet/react-dates": "^12.3.0",
+    "@kupibilet/react-day-picker": "^7.2.5",
     "@kupibilet/react-media": "^1.5.1",
     "rc-collapse": "^1.9.0",
     "rc-tabs": "9.4.6",
     "react-autosuggest": "^9.0.0",
     "react-portal": "^4.1.4",
+    "react-visibility-sensor": "^4.1.1",
     "rheostat": "^2.1.3",
     "section-iterator": "^2.0.0"
   },
