--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@ rules:
   react/jsx-one-expression-per-line: off
   react/destructuring-assignment: off
   jsx-a11y/anchor-is-valid: off
+  react/prop-types: off
 
 globals:
   InputEvent: true
