--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "flow-bin": "^0.82.0",
     "glob": "^7.1.2",
     "husky": "^1.1.0",
-    "jest": "test",
+    "jest": "^24.5.0",
     "jest-styled-components": "^6.2.1",
     "lint-staged": "^7.2.0",
     "lodash": "^4.17.4",
