--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "flow": "flow",
     "versionize": "versionize",
     "prebuild": "scripts/check-engines.js",
-    "build": "BABEL_ENV=esmodules NODE_ENV=production babel src/ -d ./ --ignore stories,test",
+    "build": "BABEL_ENV=esmodules NODE_ENV=production babel src/ -d ./ --ignore stories",
     "watch": "yarn build --watch",
     "//": "---        NPM hooks section        ---",
     "postinstall": "move-bin; true",
