try switch modules to 'auto'

--- a/.babelrc
+++ b/.babelrc
@@ -38,7 +38,7 @@
         }]
       ],
       "presets": [
-        ["@babel/preset-env", {"modules": false}],
+        ["@babel/preset-env"],
         "@babel/preset-react",
         "@babel/preset-flow"
       ]
