--- a/.babelrc
+++ b/.babelrc
@@ -38,7 +38,7 @@
         }]
       ],
       "presets": [
-        ["@babel/preset-env"],
+        ["@babel/preset-env", {"modules": false}],
         "@babel/preset-react",
         "@babel/preset-flow"
       ]
