--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "flow": "flow",
     "versionize": "versionize",
     "prebuild": "scripts/check-engines.js",
-    "build": "BABEL_ENV=esmodules NODE_ENV=production babel src/ -d ./ --ignore stories,test",
+    "build": "yarn build:es && yarn build:flow",
+    "build:es": "BABEL_ENV=esmodules NODE_ENV=production babel src/ -d ./ --ignore stories,test",
+    "build:flow": "flow-copy-source -v src ./",
     "watch": "yarn build --watch",
     "//": "---        NPM hooks section        ---",
     "postinstall": "move-bin; true",
@@ -73,6 +75,7 @@
     "eslint-config-kupibilet": "^10.2.0",
     "eslint-import-resolver-babel-module": "^5.0.0-beta.1",
     "flow-bin": "^0.82.0",
+    "flow-copy-source": "^2.0.4",
     "glob": "^7.1.2",
     "husky": "^1.1.0",
     "jest": "^24.5.0",
