--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@emotion/core": "^10.0.10",
     "@kupibilet/icons": "~5.3.23",
     "@kupibilet/moment": "^0.0.3",
     "@storybook/addon-centered": "^5.0.11",
